--- a/FP.css
+++ b/FP.css
@@ -1,30 +1,103 @@
-.row {
-    display: table;
-    width: 95%; /*Optional*/
-    /* table-layout: fixed; Optional */
-    border-spacing: 10px; /*Optional*/
-    background-color: gray;
-    margin: auto;
+.filters{
+    position: relative;
+    margin-top: 20px;
+    width: 25%;
+    padding: 20px;
+    vertical-align: top;
+    height: min-content;
+    background-color: white;
+    display: inline-block;
+  }
+
+.main-img{
+    /* background-color: green; */
+    width: 45%;
+    /* background-color: yellow; */
+    text-align: center;
+    height: min-content;
+    display: inline-block;
 }
-.column {
-    display: table-cell;
-    background-color: red; /*Optional*/
+.list-images{
+    display: inline-block;
+    margin-top: 20px;
+    vertical-align: top;
+    padding: 10px;
+    background-color: white;
 }
 
+.list-images > img{
+  width: 90px;
+  height: 100px;
+}
+.row{
+    margin-left: 30px;
+    margin-right: 30px;
+    background-color: transparent;
+}
 .heading{
-    margin: auto;
-    width: 95%;
-    background-color: rgb(156, 151, 156);
+    background-color: white;
+    text-align: left;
+    margin-left: 30px;
+    margin-right: 30px;
+    
+}
+
+.heading > h3{
+    font-size: 40px;
+    color: brown;
+    padding: 2px;
+    font-family:Arial, Helvetica, sans-serif;
 }
 
 body{
-    background-color: rgb(207, 204, 204);
+    /* background-color: #f0f0f0;÷ */
+    background-image: url(./FP_images/background.jpg);
 }
 
-.left-filters{
-    width: 25%;
+
+.btnReset{
+    margin-top: 15px;
+    background-color: rgb(250, 177, 67);
+    color: white;
+    font-size: 18px;
+    width: 65px;
+    height: 40px;
 }
 
-.img-container{
-    width: 45%;
-}
+
+
+/* Slider code   */
+
+  
+  .slider {
+    -webkit-appearance: none;
+    width: 75%;
+    height: 8px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    margin-top: 7px;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+  }
+  
+  .slider:hover {
+    opacity: 1;
+  }
+  
+  .slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 15px;
+    height: 25px;
+    background: #a8abaa;
+    border: 1px solid black;
+    cursor: pointer;
+  }
+  
+  .slider::-moz-range-thumb {
+    width: 15px;
+    height: 25px;
+    background: #04AA6D;
+    cursor: pointer;
+  }
