--- a/FP.css
+++ b/FP.css
@@ -10,9 +10,7 @@
   }
 
 .main-img{
-    /* background-color: green; */
     width: 45%;
-    /* background-color: yellow; */
     text-align: center;
     height: min-content;
     display: inline-block;
@@ -50,7 +48,6 @@
 }
 
 body{
-    /* background-color: #f0f0f0;÷ */
     background-image: url(./FP_images/background.jpg);
 }
 
@@ -62,6 +59,13 @@ body{
     font-size: 18px;
     width: 65px;
     height: 40px;
+}
+
+#figCap{
+  background-color: white;
+  padding: 10px;
+  width: 63%;
+  margin: auto;
 }
 
 
